# cg3

./: .cirrus.star  .cirrus.yml  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.adoc  README.adoc  auto.ps1  copyright  dependencies.txt  install_vs.bat  vcpkg-configuration.json  vcpkg.json  vs.bat
.github/workflows/: main.yml
changelog/: ChangeLog-v0.1.2.md  ChangeLog-v0.2.0.md  ChangeLog-v0.2.1.md  ChangeLog-v0.2.2.md
checks/arityck/: CMakeLists.txt  README.adoc
checks/arityck/docs/: CMakeLists.txt  cg3-check-arityck.7.adoc
checks/arityck/docs/classes/: arityck.adoc
checks/arityck/src/arityck/: arityck.cxx  arityck.hxx
checks/arityck/test/: CMakeLists.txt  ast_tests.cxx  check_spec.cxx  main.cxx
checks/arityck/test/data/: bad.c  bad.cxx  empty.cxx  ok.cxx
checks/bugmalloc/: CMakeLists.txt  README.adoc
checks/bugmalloc/src/bugmalloc/: bugmalloc.cxx  bugmalloc.hxx  invalid_malloc_callback.cxx  invalid_malloc_callback.hxx
checks/bugmalloc/test/: CMakeLists.txt  ast_tests.cxx  check_spec.cxx
checks/bugmalloc/test/data/: bad.c  bad.cxx  debugmalloc.h  empty.c  empty.cxx  ok.c  ok.cxx  partial.c  partial.cxx  tricky.c  tricky.cxx
checks/chonktion/: CMakeLists.txt  README.adoc
checks/chonktion/src/chonktion/: chonktion.cxx  chonktion.hxx
checks/chonktion/test/: CMakeLists.txt  ast_tests.cxx  check_spec.cxx
checks/chonktion/test/data/: big_high.c  big_high.cxx  big_low.c  big_low.cxx  empty.c  empty.cxx  gargantuan_high.c  gargantuan_high.cxx  gargantuan_low.c  gargantuan_low.cxx  huge_high.c  huge_high.cxx  huge_low.c  huge_low.cxx  ok.c  ok.cxx
checks/fio/: CMakeLists.txt  README.adoc
checks/fio/src/fio/: call_pos.cxx  call_pos.hxx  closer_callback.cxx  closer_callback.hxx  fio.cxx  fio.hxx  io_op_callback.cxx  io_op_callback.hxx  opener_callback.cxx  opener_callback.hxx
checks/fleak/: CMakeLists.txt  README.adoc
checks/fleak/src/fleak/: fleak.cxx  fleak.hxx  func_data.cxx  func_data.hxx
checks/fleak/test/: CMakeLists.txt  check_spec.cxx
checks/globus/: CMakeLists.txt
checks/globus/src/globus/: global_var_callback.cxx  global_var_callback.hxx  globus.cxx  globus.hxx
checks/hunction/: CMakeLists.txt  README.adoc
checks/hunction/src/hunction/: hunction.cxx  hunction.hxx
checks/t/: CMakeLists.txt
checks/t/src/t/: t.cxx  t.hxx
ci/: gather-coverage.bat  gather-coverage.sh  make_release.bat  make_release.sh  package_env.bat  upload-artefact.bat  upload-artefact.sh  version_env.bat  vs.bat
cmake/: add_ast.cmake  add_check.cmake  add_covered_test.cmake  add_htmldoc.cmake  add_manpage.cmake  cpack_config.cmake  generate_lto.cmake  generate_warnings.cmake  get_arch.cmake
cmake/toolchains/: arm64-linux-clang.cmake  arm64-linux-gcc.cmake  x64-linux-clang.cmake  x64-linux-gcc.cmake  x64-windows-clang.cmake  x64-windows-msvc.cmake
cmake/try/: fs_path_hash.cxx
docs/: CMakeLists.txt
docs/man/: CMakeLists.txt  cg3-check.1.adoc  cg3-db.1.adoc  cg3.1.adoc
docs/man/cg3/: cmd-check.adoc  cmd-db.adoc
ext/janet/: CMakeLists.txt  janet.c  janet.h
ext/janetxx/: CMakeLists.txt
ext/janetxx/src/jxx/: abstract_type_cast_exception.hxx  func.hxx  janet_rt.hxx  janet_runtime_exception.hxx
ext/janetxx/src/jxx/impl/: definer_proxy.hxx  dissector.hxx
ext/janetxx/src/jxx/values/: boolean.hxx  function.hxx  integer.hxx  native_conversion_error.hxx  string.hxx  types.hxx
hooks/: install.pl
hooks/commit-msg/: semantic-commits.pl
hooks/pre-commit/: semantic-commits.pl
src/cg3/: CMakeLists.txt  check_cmd.cxx  check_cmd.hxx  db_cmd.cxx  db_cmd.hxx  main.cxx  runtime_loader.cxx  runtime_loader.hxx
src/cg3-api/: CMakeLists.txt  clang.csv  matchers.scm
src/cg3-api/src/cg3-api/: load_vm.hxx  matcher_funcs.cxx
src/cg3-check/: CMakeLists.txt  main.cxx  runtime_loader.cxx  runtime_loader.hxx
src/cg3-common/: CMakeLists.txt  execute_process.cxx  execute_process.hxx  filter.cxx  filter.hxx  find_executable.hxx  find_executable.posix.cxx  find_executable.win32.cxx  path_finder.cxx
src/cg3-common/src/cg3-common/: boost-json.hxx  execute_process.cxx  execute_process.hxx  filter.cxx  filter.hxx  hash_storages.hxx  path_finder.cxx  path_finder.hxx
src/cg3-db/: CMakeLists.txt  compiler_info.cxx  compiler_info.hxx  fixup_compiler.hxx  fixup_compiler.posix.cxx  fixup_compiler.win32.cxx  main.cxx  parse_dir.hxx  path_insert_iterator.hxx  path_transformer.cxx  path_transformer.hxx
src/cg3-db/src/cg3-db/: main.cxx  path_insert_iterator.cxx  path_insert_iterator.hxx  path_transformer.hxx
src/cg3-shell/: CMakeLists.txt  shell.c
src/cg3-shell/src/cg3-shell/: shell.c  shell.cxx
src/cg3/src/cg3/: check_cmd.cxx  check_cmd.hxx  cli-with-vector-data.hxx  db_cmd.cxx  db_cmd.hxx  main.cxx  shell_cmd.cxx  shell_cmd.hxx
src/chk3/: CMakeLists.txt  check.cxx  check.hxx  check_includes.in.hxx  checks.in.hxx  collecting_consumer.cxx  collecting_consumer.hxx  diagnostics_collection.hxx  diagnostics_exporter.hxx  loader.cxx  loader.hxx
src/chk3/src/chk3/: checks.in.hxx  collecting_consumer.cxx  collecting_consumer.hxx  diagnostics_collection.cxx  diagnostics_collection.hxx  diagnostics_exporter.cxx  text_exporter.cxx  text_exporter.hxx
src/util/test-commons/: capture_stream.hxx  test_ast_loader.hxx  test_consumer.hxx
src/util/winarch/: main.cxx
test/: CMakeLists.txt
test/chk3/: CMakeLists.txt  collecting_consumer.cxx  diagnostics_collection.cxx
test/jxx/: CMakeLists.txt  janet_boolean.cxx  janet_func.cxx  janet_function.cxx  janet_integer.cxx  janet_rt.cxx  janet_string.cxx
test/test-commons/: CMakeLists.txt
test/test-commons/src/test-commons/: capture_stream.cxx  test_ast_loader.hxx  test_consumer.hxx
